---
source: compiler-core/src/erlang/tests/use_.rs
expression: "\npub fn main() {\n  use <- pair(1.0)\n  123\n}\n\nfn pair(x, f) {\n  let y = f()\n  #(x, y)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  use <- pair(1.0)
  123
}

fn pair(x, f) {
  let y = f()
  #(x, y)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 7).
-spec pair(K, fun(() -> O)) -> {K, O}.
pair(X, F) ->
    Y = F(),
    {X, Y}.

-file("project/test/my/mod.gleam", 2).
-spec main() -> {float(), integer()}.
main() ->
    pair(1.0, fun() -> 123 end).
